fadubackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: fadubackend
  name: fadubackend
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      io.kompose.service: fadubackend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
        traefik.docker.network: faduviva
        traefik.enable: "true"
        traefik.http.routers.backend-insecure.entrypoints: http
        traefik.http.routers.backend-insecure.rule: (Host(`fadu-viva.eryx.co`) ||
          Host(`localhost`)) && PathPrefix(`/api`)
        traefik.http.routers.backend.entrypoints: https
        traefik.http.routers.backend.rule: (Host(`fadu-viva.eryx.co`) || Host(`localhost`))
          && PathPrefix(`/api`)
        traefik.http.routers.backend.tls: "true"
        traefik.http.services.backend.loadbalancer.server.port: "5000"
      creationTimestamp: null
      labels:
        io.kompose.service: fadubackend
    spec:
      containers:
      - env:
        - name: CACHE_SERVER_HOST
          value: cache
        - name: CACHE_SERVER_PORT
          value: "11211"
        - name: DEBUG
          value: "True"
        - name: ENVIRONMENT
          value: development
        image: eryxcoop/fadu-viva-backend
        imagePullPolicy: Always
        name: fadu-backend
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
