fadubackend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: prueba.local
      http:
        paths:
          - path: /
            backend:
              serviceName: fadubackend
              servicePort: 80
